--- a/content.html
+++ b/content.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taylor-swift-lyric-website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello</h1>
-    <img src="number_songs_per_album.png">
+    <h1>t-swift song analysis</h1>
+    <h2>more coming lol just started</h2>
+    <img src="corr_all_attributes.png">
 </body>
 </html>
+
