--- a/content.html
+++ b/content.html
@@ -10,7 +10,12 @@
 <body>
     <h1>t-swift song analysis</h1>
     <h2>more coming lol just started</h2>
-    <img src="corr_all_attributes.png">
+    <!-- <img src="corr_all_attributes.png"> -->
+    <br>
+
+    <object id="pop-scatter" width="600" height="500" data="Popularity of songs per album.html"></object>
+    <!-- <iframe src = "b.popularity_scatter.html" height="*80px*" width="*500px*" > </iframe> -->
+
 </body>
 </html>
 
