add px scatterplots to website

--- a/content.html
+++ b/content.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <h1>t-swift song analysis</h1>
-    <h2>more coming lol just started</h2>
+    <h2>just started lol more will come</h2>
+    <p>here is some explanation of what's going on</p>
     <!-- <img src="corr_all_attributes.png"> -->
     <br>
-
-    <object id="pop-scatter" width="600" height="500" data="Popularity of songs per album.html"></object>
-    <!-- <iframe src = "b.popularity_scatter.html" height="*80px*" width="*500px*" > </iframe> -->
-
+    <div>
+        <object id="pop-scatter" width="49.75%" height="500" data="./images/Popularity of songs.html"></object>
+        <object id="acousticness-scatter" width="49.75%" height="500" data="./images/Acousticness of songs.html"></object>
+        <object id="length-scatter" width="100%" height="500" data="./images/Length of songs.html"></object>
+    </div>
+    <br>
+    <h1>more stuff below</h1>
 </body>
 </html>
 
