--- a/content.html
+++ b/content.html
@@ -20,6 +20,8 @@
     </div>
     <br>
     <h1>more stuff below</h1>
+    <object id="scatter-e-vs-t" width="49.75%" height="500" data="./images/Energy versus tempo.html"></object>
+    <object id="scatter-e-vs-d" width="49.75%" height="500" data="./images/Energy versus danceability.html"></object>
 </body>
 </html>
 
