--- a/content.html
+++ b/content.html
@@ -14,9 +14,11 @@
     <!-- <img src="corr_all_attributes.png"> -->
     <br>
     <div>
+        <object id="num-songs" width="49.75%" height="700" data="./images/number_songs_per_album.html"></object>
+        <object id="corr-matrix" width="49.75%" height="700" data="./images/corr_matrix.html"></object>
         <object id="pop-scatter" width="49.75%" height="500" data="./images/Popularity of songs.html"></object>
         <object id="acousticness-scatter" width="49.75%" height="500" data="./images/Acousticness of songs.html"></object>
-        <object id="length-scatter" width="100%" height="500" data="./images/Length of songs.html"></object>
+        <object id="length-scatter" width="49.75%" height="500" data="./images/Length of songs.html"></object>
     </div>
     <br>
     <h1>more stuff below</h1>
