--- a/content.html
+++ b/content.html
@@ -24,6 +24,12 @@
     <h1>more stuff below</h1>
     <object id="scatter-e-vs-t" width="49.75%" height="500" data="./images/Energy versus tempo.html"></object>
     <object id="scatter-e-vs-d" width="49.75%" height="500" data="./images/Energy versus danceability.html"></object>
+    <br>
+    <h1>Album averages</h1>
+    <object id="avg-p" width="49.75%" height="400" data="./images/Average popularity of songs per album.html"></object>
+    <object id="avg-l" width="49.75%" height="400" data="./images/Average length of songs per album.html"></object>
+    <object id="avg-d" width="49.75%" height="400" data="./images/Average danceability of songs per album.html"></object>
+    <object id="avg-e" width="49.75%" height="400" data="./images/Average energy of songs per album.html"></object>
 </body>
 </html>
 
